@@ -27,6 +27,64 @@
 
 [0 1]
 
+1
+12
+0
+
+[1 0 0]
+
+[0 1 0]
+
+[0 0 1]
+
+[[-691, 0; 0, -1; 36, 0], [-1, 0; 0, -691], 691, Vecsmall([1, 2])]
+3
+[[0; 0; -1], Mat(-1), 1, Vecsmall([3])]
+[0, 1, 0]~
+[4*x^9 - 25*x^7 + 42*x^5 - 25*x^3 + 4*x]
+-4*x^9 + 25*x^7 - 42*x^5 + 25*x^3 - 4*x
+[0, 0, -1]~
+
+[0 -691]
+
+[1    0]
+
+[0   36]
+
+
+[-24   0    0]
+
+[  0 -24    0]
+
+[108   0 2049]
+
+1
+
+[    0 -1/120]
+
+[1/630      0]
+
+[    0 3/6910]
+
+[[-691, 0; 0, -1; 36, 0], [-1, 0; 0, -691], 691, Vecsmall([1, 2])]
+[[[+oo, 0]], [[[[1, 1; [0, 1; -1, 0], 1], 1]], [[[1, 1; [0, -1; 1, -1], 1; [
+-1, 1; -1, 0], 1], 2]]]]
+[Mat([[1, 1; 2, 3], 1])]
+-1237/60
+[[[1, 0; 0, 1], [0, 1; -1, 0]], Vecsmall([1, 2]), [[0, 1; -1, 0], [0, -1; 1,
+ -1]]]
+[1, -24, 252, -1472, 4830, -6048, -16744, 84480, -113643, -115920, 534612, -
+370944, -577738, 401856, 1217160, 987136]
+
+[1  0 0]
+
+[0 -1 0]
+
+[0  0 1]
+
+[[[-43780709, 1166927608; -199616, -774931811; 105162624, 125134377984], [-7
+74931811, -1166927608; 199616, -43780709], 34160001533632527, Vecsmall([1, 2
+])]]
 0
 0
   ***   at top-level: mseval(W,xpm[1],[1])
@@ -61,7 +119,6 @@
  -1/2]~, [0, 1/2, -1/2]~, [1/4, 0; -1/2, 1/2; -1/2, -1/2]], [[1/2, -1, -1]~,
  [0, 1/2, -1/2]~, [1/2, 0; -1, 1/2; -1, -1/2]], [[1/8, -1/4, -1/4]~, [0, 1/2
 , -1/2]~, [1/8, 0; -1/4, 1/2; -1/4, -1/2]]]
-227
 [[[-2, -2; -7, -1; -8, 4; -1, -1; 4, 1; -6, 0; -2, 1; 4, 1; 2, -1; -1, -1; 1
 1, -1; 9, -3; 8, -4; 5, 2; 8, 2; -2, 1; 4, 1; -8, 1; 1, 1; -1, -1], [1, -2; 
 -7, 2], 12, Vecsmall([1, 2])], [[0, 0; 0, 0; 0, 0; -2, 3; 2, -3; 0, 0; 2, -3
@@ -472,4 +529,4 @@ O(11^7) + (10 + 3*11 + 6*11^2 + 9*11^3 + 8*11^4 + 5*11^5 + O(11^6))*x + (6 +
 [0, 0, 0, -1705/48, -57707/864]: [2, 1]
 [0, 0, 0, -13635/16, 306207/32]: [18, 3]
 [0, 0, 0, -131065/48, -47449331/864]: [6, 1]
-Total time spent: 3798
+Total time spent: 4842
