@@ -350,6 +350,7 @@ LGr 140- make TESTS="a b c" test-all to test only 'a' 'b' and 'c', e.g.
 BA  144- [libpari] QXQ_mul, QXQ_sqr, FFXQ_mul, FFXQ_sqr
     145- New GP function idealispower
 BA  146- New GP function nfeltredmodpower
+    147- 'ms' modular symbol package: support N = 1 as well
 
   Changed
       1- rewrite bnfnarrow
